# brave-core

./: .brave_gclient  .clang-format  .clang-tidy  .clangd  .eslintrc  .eslintrc.js  .eslintrc.json  .gclient  .git-blame-ignore-revs  .gitallowed  .gitattributes  .gitignore  .gitmodules  .node-version  .notenv  .nowignore  .npmrc  .prettierignore  .prettierrc.js  .prettierrc.json  .pylint2rc  .pylintrc  .reviewdog.yml  .rustfmt.toml  .semgrepignore  .sonarcloud.properties  .style.yapf  .swiftlint.yml  .travis.yml  .yapfignore  AGENTS.md  BUILD.gn  Brave_iPad.xctestplan  CHANGELOG.md  CMakeLists-GoogleTests.txt.in  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Cartfile  Cartfile.resolved  (+72 more)
.storybook/: .babelrc  BUILD.gn  addons.js  config.js  locale.ts  main.js  main.ts  manager.js  manager.ts  options.ts  preview.js  preview.tsx  utils.ts  webpack.config.js  webpack.config.ts
android/: BUILD.gn  android_browser_tests.gni  brave_android_wireguard_sources.gni  brave_java_components_resources.gni  brave_java_resources.gni  brave_java_sources.gni  brave_junit_test_java_sources.gni  brave_xml_preprocessor.gni  xml_processor.py  xml_processor.pydeps
app/: BUILD.gn  DEPS  access_code_cast_strings.grdp  actor_strings.grdp  app-entitlements-brave.plist  app_management_strings.grdp  app_management_strings_override.grdp  app_modal_strings.grdp  autofill_payments_strings.grdp  background.js  background.ts  bookmark_bar_strings.grdp  bookmarks_strings.grdp  bookmarks_strings_override.grdp  braveShieldsPanel.js  braveShieldsPanel.tsx  brave_app_management.grdp  brave_command_ids.h  brave_command_line_helper.cc  brave_command_line_helper.h  brave_command_line_helper_unittest.cc  brave_dll.rc  brave_exe.rc  brave_exe.ver  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate.h  brave_main_delegate_browsertest.cc  brave_main_delegate_runtime_flags_browsertest.cc  brave_main_delegate_unittest.cc  brave_origin_strings.grd  brave_origin_strings_override.grd  brave_screenshots_strings.grdp  brave_settings_strings.grdp  brave_strings.grd  brave_strings_main.grdp  brave_strings_override.grd  certificate_manager.grdp  chromeos_shared_strings.grdp  command_utils.cc  (+74 more)
base/: BUILD.gn  brave_base_cached_flags_java_sources.gni  brave_base_shared_preferences_java.gni  build_time_unittest.cc  buildflag_config.cc  buildflag_config.h  delete_soon_helper.h  feature_override_unittest.cc  finite_state_machine.h  sources.gni  tools_sanity_unittest.cc
brave_domains/: BUILD.gn  DEPS  buildflags.gni  constants.cc  constants.h  constants_unittest.cc  service_domains.cc  service_domains.h  service_domains_unittest.cc  urls.cc  urls.h  urls_unittest.cc
browser/: BUILD.gn  DEPS  about_flags.cc  alternate_private_search_engine_browsertest.cc  alternate_private_search_engine_controller.cc  alternate_private_search_engine_controller.h  alternate_private_search_engine_util.cc  alternate_private_search_engine_util.h  brave_app_controller_mac.h  brave_app_controller_mac.mm  brave_app_controller_mac_browsertest.mm  brave_app_controller_mac_unittest.mm  brave_autofill_browsertest.cc  brave_browser_features.cc  brave_browser_features.h  brave_browser_main_extra_parts.cc  brave_browser_main_extra_parts.h  brave_browser_main_extra_parts_p3a.cc  brave_browser_main_extra_parts_p3a.h  brave_browser_main_extra_parts_p3a_unittest.cc  brave_browser_main_loop.cc  brave_browser_main_loop.h  brave_browser_main_parts.cc  brave_browser_main_parts.h  brave_browser_main_parts_mac.h  brave_browser_main_parts_mac.mm  brave_browser_process.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_browser_resources.grd  brave_content_browser_client.cc  brave_content_browser_client.h  brave_content_browser_client_browsertest.cc  brave_content_browser_client_unittest.cc  brave_cosmetic_resources_tab_helper.cc  brave_cosmetic_resources_tab_helper.h  brave_drm_tab_helper.cc  brave_drm_tab_helper.h  brave_features_browsertest.cc  (+79 more)
chromium_src/: .clangd  BUILD.gn  DEPS  PRESUBMIT.py  check_chromium_src_config.json5
common/: BUILD.gn  DEPS  brave_channel_info.cc  brave_channel_info.h  brave_channel_info_browsertest.cc  brave_channel_info_linux.cc  brave_channel_info_linux.h  brave_channel_info_mac_unittest.cc  brave_channel_info_posix.cc  brave_channel_info_posix.h  brave_channel_info_unittest.cc  brave_common_message_generator.cc  brave_common_utils.cc  brave_common_utils.h  brave_constants.cc  brave_constants.h  brave_content_client.cc  brave_content_client.h  brave_content_client_unittest.cc  brave_cookie_blocking.cc  brave_cookie_blocking.h  brave_debugger.mojom  brave_debugger_messages.h  brave_farbling_constants.h  brave_features.cc  brave_features.h  brave_isolated_worlds.h  brave_override_util.h  brave_paths.cc  brave_paths.h  brave_paths_mac.h  brave_paths_mac.mm  brave_paths_unittest.cc  brave_renderer_configuration.mojom  brave_service_key_helper.cc  brave_service_key_helper.h  brave_services_key_helper.cc  brave_services_key_helper.h  brave_switches.cc  brave_switches.h  (+39 more)
components/: BUILD.gn  DEPS  accessibility_annotator_strings.grdp  android_system_error_page_strings.grdp  arc_strings.grdp  autofill_assistant_strings.grdp  autofill_payments_strings.grdp  autofill_prediction_improvements_strings.grdp  autofill_strings.grdp  blocked_content_strings.grdp  bookmark_bar_strings.grdp  bookmark_bar_strings_override.grdp  bookmark_component_strings.grdp  browsing_data_strings.grdp  collaboration_strings.grdp  commerce_strings.grdp  components_brave_origin_strings.grd  components_brave_strings.grd  components_brave_strings_main.grdp  components_settings_strings.grdp  components_strings.grd  components_strings_override.grd  compose_strings.grdp  content_creation_strings.grdp  contextual_cueing_strings.grdp  contextual_tasks_strings.grdp  crash_strings.grdp  dialog_strings.grdp  dom_distiller_strings.grdp  enterprise_strings.grdp  error_page_strings.grdp  error_page_strings_override.grdp  external_intents_strings.grdp  facilitated_payments_strings.grdp  find_in_page_strings.grdp  (+70 more)
(+55267 files in other folders)
